0.14.1.AA (PRE-RELEASE):
-----------------------
- Synced with Upstream v0.14.1
- Fixes Potential Memory Conflict
  * Some constants were passed to a function that reallocates memory
  * This bug was introduced in v0.14.0.AA (Commit 3fc36f5)
    - Extended in v0.14.0.AB (Commit 5cb1ed9)
- Fixes Hidden Entry Handling
  * Some loaders in ESP locations were not hidden when selected on-screen (minus key)
  * Was also the case when full paths were used in `dont_scan_files`
- Fixes Display Resolution Handling
  * User defined resolutions were not being properly handled
    - Only the default, `max`, resolution was considered
    - This meant that instances with defined resolutions were not properly displayed
  * Separately, the selected resolution when seeking `max` was not always the actual maximum
- Improves `MemTest` Handling
  * Updated exclusion from loaders (Row 1 Items)
  * Updated to handle `memtest+{ARCH}.efi` and `memtest86+{ARCH}.efi` files as per upstream
- Improves Misc Handling
  * Restructured config File into four (4) sections
  * Completed LodePNG 20230410 update started in v0.14.0.AC


0.14.0.AC (06 FEB 2024):
-----------------------
- Adds `SyncNVram` Feature
  * Sets RefindPlus to always clear some nvRAM settings on certain boot types
    - Currently applied to Bluetooth settings for macOS
      * bluetoothInternalControllerinfo
      * bluetoothActiveControllerInfo
      * bluetoothExternalDongleFailed
  * The feature can be enabled using a new `sync_nvram` configuration token
- Adds `PersistBootArgs` Feature
  * Outputs of macOS boot argument related settings are now written to vRAM instead of to nvRAM
    - This is to reduce wear and tear on the nvRAM storage chip
  * Enabled by default but can be disabled using a new `persist_boot_args` configuration token
- Fixes `HelpIcon` Feature
  * The feature had been switched off by default instead of being switched on
  * This bug was introduced in v0.14.0.AB (Commit 9dcd45a)